default/objects/Credit_Check_Report__c/Credit_Check_Report__c.object-meta.xml
<CustomObject>
    <label>Credit Check Report</label>
    <nameField>
        <label>Credit Check Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Check Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>