default/objects/Credit_Check_Report__c/fields/Age_of_Company__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Company__c</fullName>
    <label>Age of Company</label>
    <length>5</length>
    <type>Text</type>
</CustomField>