default/objects/Credit_Check_Report__c/fields/Company_Status__c.field-meta.xml
<CustomField>
    <fullName>Company_Status__c</fullName>
    <label>Company Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>