default/objects/Credit_Check_Report__c/fields/County_Court__c.field-meta.xml
<CustomField>
    <fullName>County_Court__c</fullName>
    <label>County Court</label>
    <length>255</length>
    <type>Text</type>
</CustomField>