default/objects/Credit_Check_Report__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <label>Credit Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>