default/objects/Credit_Check_Report__c/fields/Crefo_Number__c.field-meta.xml
<CustomField>
    <fullName>Crefo_Number__c</fullName>
    <label>Crefo Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>