default/objects/Credit_Check_Report__c/fields/Date_Legal_Form__c.field-meta.xml
<CustomField>
    <fullName>Date_Legal_Form__c</fullName>
    <label>Date Legal Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>