default/objects/Credit_Check_Report__c/fields/First_Legal_Form__c.field-meta.xml
<CustomField>
    <fullName>First_Legal_Form__c</fullName>
    <label>First Legal Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>