default/objects/Credit_Check_Report__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>