default/objects/Credit_Check_Report__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Credit Check Reports</relationshipLabel>
    <relationshipName>Credit_Check_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>