default/objects/Credit_Check_Report__c/fields/Order_Situation__c.field-meta.xml
<CustomField>
    <fullName>Order_Situation__c</fullName>
    <label>Order Situation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>