default/objects/Credit_Check_Report__c/fields/Payment_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>Payment_Behaviour__c</fullName>
    <label>Payment Behaviour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>