default/objects/Credit_Check_Report__c/fields/Register_Number__c.field-meta.xml
<CustomField>
    <fullName>Register_Number__c</fullName>
    <label>Register Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>