default/objects/Credit_Check_Report__c/fields/Turn_Over__c.field-meta.xml
<CustomField>
    <fullName>Turn_Over__c</fullName>
    <label>Turn Over</label>
    <length>255</length>
    <type>Text</type>
</CustomField>