default/objects/Credit_Check_Report__c/fields/VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number__c</fullName>
    <label>VAT Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>